manifests/addons/kube-prometheus/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://sso.loutre.tel/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://sso.loutre.tel/oauth2/start?rd=https://$host$escaped_request_uri"
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prom.loutre.tel
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        path: /
        pathType: Prefix
